--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,34 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
+
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="cuerpocarta">
+      <div class="container-fluid text-center">
+        <div class="card" style="width: 18rem;">
+          <div class="card" id="paloarriba"></div>
+          <div class="card" id="numerocentro"></div>
+          <div class="card" id="paloabajo"></div>
+        </div>
       </div>
+    </div>
+
+    <div class="input-group mb-3">
+      <input
+        type="text"
+        class="form-control"
+        id="numero-cartas"
+        placeholder="Número menor a 10"
+        aria-label="mm"
+        aria-describedby="button-addon2"
+      />
+      <button
+        class="btn btn-outline-secondary"
+        type="button"
+        id="btncrearcartas"
+      >
+        Crear
+      </button>
     </div>
   </body>
 </html>
