--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   </head>
 
   <body>
+    <div class="contenedor" id="nuevascartas"></div>
     <div class="cuerpocarta">
       <div class="container-fluid text-center">
         <div class="card" style="width: 18rem;">
