--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <div class="contenedor" id="nuevascartas"></div>
-    <div class="cuerpocarta">
+    <!-- <div class="cuerpocarta">
       <div class="container-fluid text-center">
         <div class="card" style="width: 18rem;">
           <div class="card" id="paloarriba"></div>
@@ -23,7 +23,7 @@
           <div class="card" id="paloabajo"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="input-group mb-3">
       <input
