--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,10 @@
         Crear
       </button>
     </div>
+    <div>
+      <button type="button" class="btn btn-outline-success" id="btnordenar">
+        Ordenar
+      </button>
+    </div>
   </body>
 </html>
